# quantpilot

./: .env.example  .gitignore  README.md  config.example.yaml  main.py  requirements.txt
.github/workflows/: build-dmg.yml  deploy-pages.yml
app/: index.html  manifest.webmanifest  package.json  styles.css  sw.js
app/src/: api.js  main.js
app/src/ai/: berkshire.js
app/src/core/: store.js
app/src/data/: feeds.js  qlib.js
app/src/engine/: backtest.js  factors.js  indicators.js  ml.js  strategies.js
app/src/pages/: ai.js  dashboard.js  market.js  settings.js  strategy.js  trade.js
app/src/trade/: brokers.js  notify.js  paper.js
app/src/ui/: components.js  kchart.js
app/tests/: engine.test.mjs
app/types/: quantpilot.d.ts
bridge/: qlib_bridge.py  qmt_bridge.py  ths_bridge.py  update_qlib_data.py
core/: config.py  logger.py  models.py
decision/: ai_engine.py  providers.py
execution/: ashare_data.py  polymarket.py
listeners/: base.py  news_api_listener.py  twitter_listener.py
risk/: slippage.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
